--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -1,4 +1,6 @@
 @import "./normalize.scss";
 $orange:#FFA500;
 $bigfontSize:60px;
-$smallfontSize:24px
+$smallfontSize:24px;
+$blueFont:'#00B7FD';
+$fontFamily:"Roboto","Source Sans Pro",'Helvetica Neue','Microsoft YaHei','黑体-简','b8bf53',"Helvetica Neue",Helvetica,Arial,sans-serif;
